============================
Change log for gocept.jsform
============================

2.8.0 (unreleased)
==================

- Add group widget and table widget which use list widget to render items in
  groups / as table.


2.7.2 (2015-12-04)
==================

- Refactor radio button template to use the same source API as object templates.


2.7.1 (2015-12-04)
==================

- Fixed syntax error.


2.7.0 (2015-12-04)
==================

- Suppress success messages in UI when saving all remaining fields.

- Add new template than renders a list of radio buttons.


2.6.3 (2015-11-18)
==================

- Add some more translations.

- Disable placeholder for select fields which are required.


2.6.2 (2015-11-17)
==================

- Unify node where form data is saved to.


2.6.1 (2015-11-16)
==================

- Fix initialization of sources if form data is provided directly instead of
  retrieving it via load url.

- Make sure that `after-load` always fires asynchonously.

2.6.0 (2015-11-12)
==================

- Add option to switch one field or the whole form to readonly mode.


2.5.1 (2015-11-11)
==================

- Use `bower-knockout-mapping` in bower package instead of serving mapping
  plugin directly. (only effects bower package of `gocept.jsform`)


2.5.0 (2015-11-06)
==================

- Add list widget which uses jsform to display edit form of list items.

- Remove version pin of Handlebars, since error related to Handlebars 4 is
  specific to the application that uses gocept.jsform.


2.4.0 (2015-09-08)
==================

- Pin version of Handlebars to 3.0.3, since switching to a new major version
  should be done on purpose, rather by chance.


2.3.0 (2015-07-31)
==================

- Display status messages 3 seconds instead of 1 second. This hopefully will
  fix test failures in Jenkins.

- Introduced, that a save call to a widget can manipulate the source values of